# numerical-analysis

./: README.md  pyproject.toml
numerical_analysis/final_proyect/: results_table.tex  sim.ipynb
numerical_analysis/worksheet_1/: exercise_3.ipynb  exercise_6.ipynb  exercise_8.ipynb
numerical_analysis/worksheet_2/: exercise_a.ipynb  exercise_c.ipynb  exercise_e.ipynb
numerical_analysis/worksheet_3/: exercise_1_order.ipynb  exercise_2.ipynb  exercise_3_order.ipynb
numerical_analysis/worksheet_4/: exercise_2.ipynb  exercise_3.ipynb
numerical_analysis/worksheet_5/: exercise_5.ipynb  exercise_6.ipynb  exercise_7.ipynb
